Fixing error "right no es un valor de align-items : right"

--- a/portfolio/styles/styles.css
+++ b/portfolio/styles/styles.css
@@ -20,7 +20,6 @@ header {
 nav {
     display: flex;
     justify-content: space-around;
-    align-items: right;
     grid-column: 2 / -2;
 }
 
